Update to JDK 22 FFM API (public release)